Printing: Remove check for Windows RPCS printers

Now that we check for invalid paper sizes, we no longer need the RPCS
driver check to prevent crashes on Win10. This will also fix breakage
of Japanese RPCS drivers that support Win10.

BUG=730919

Review-Url: https://codereview.chromium.org/2932043002
Cr-Commit-Position: refs/heads/master@{#478172}

Former-commit-id: 685631bcd8b90950498e80f74009660ea5f75010